--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ html {
 .bg-color{
   background-color: antiquewhite;
 }
+.bg-colour-service{
+  background-color: antiquewhite;
+}
 @keyframes marquee {
     0% { transform: translateX(100%); }
     100% { transform: translateX(-100%); }
